fix nav on mobile

--- a/src/app/core/menu/menu-nav.component.scss
+++ b/src/app/core/menu/menu-nav.component.scss
@@ -223,9 +223,6 @@ form{
 	}
 }
 @media(max-width: 992px){
-	.lang-cont{
-		text-align: right;
-	}
 	.top-mobile{
 		display: block;
 	}
@@ -238,9 +235,17 @@ form{
 		margin: 0 !important;
     	width: 100%;
 	}
+	.search-container{
+		margin: 0 auto;
+    	display: inline-block;
+	}
+	.nav-language{
+		margin: 0 auto;
+    	display: inline-block;
+	}
 	.access{
 		padding-left: 15px;
-		text-align: left !important;
+		text-align: center !important;
 		a{
 			color: #000000 !important;
 		    font-size: 1.1rem !important;
@@ -250,6 +255,12 @@ form{
     		padding-top: 0.5rem !important;
     		display: block;
 		}
+	}
+	.login, .signup{
+		margin-bottom: 10px;
+	}
+	#navbarSupportedContent, .nav-language{
+		text-align: center;
 	}
 	.dropdown-toggle::after{
 		display: none;
@@ -261,7 +272,10 @@ form{
     	align-items: flex-start;
 	}
 	.lang-cont{
-		padding-left: 15px;
+		display: block;
+	    width: 100%;
+	    text-align: center;
+	    padding: 0;
 	}
 	.fish-type-menu{
 		display: none;
